<resources>
    <string name="app_name">Travel The World</string>
    <string name="Find">Xin Chào! </string>
    <string name="next">Admin</string>
    <string name="search">Tìm kiếm điểm đến</string>
    <string name="recent">Nổi tiếng thế giới</string>
    <string name="tv_see">Tất cả</string>
    <string name="top_places">Việt Nam</string>
    <string name="home">Back</string>
    <string name="tvName">Mughal Gardens</string>
    <string name="star">4.5</string>
    <string name="tv_avai">Thời gian: </string>
    <string name="tv_price_range">Giá:</string>
    <string name="tv_date">18/03/2021</string>
    <string name="tv_price">$3.00-$8.00</string>
    <string name="tv_titile">Ảnh</string>
    <string name="btn_booking">Đặt chuyến đi của bạn</string>
    <string name="tv_about">Thông tin</string>
    <string name="tv_about1">Shalimar Bagh là một khu vườn Mughal ở Srinagar, Jammu và Kashmir, Ấn Độ, được liên kết qua một con kênh ở phía đông bắc của hồ Dal. Nó còn được gọi là Vườn Shalimar, Farah Baksh và Faiz Baksh. Khu vườn ven biển nổi tiếng khác ở vùng lân cận là Nishat Bagh</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tv_welcome">Welcome</string>
    <string name="tv_title">Login with your existing credentials.</string>
    <string name="email_ho_c_username">Nhập Email</string>
    <string name="tv_signup">Đăng kí</string>
    <string name="et_user">Email</string>
    <string name="tv_pass">Mật khẩu</string>
    <string name="tv_forgot">Quên mật khẩu?</string>
    <string name="et_pass">Nhập mật khẩu</string>
    <string name="tv_or">Hoặc đăng nhập bằng</string>
    <string name="btn_signup">Đăng nhập</string>
    <string name="tv_title_signu">Create a new Account</string>
    <string name="tv_full_name">Họ và Tên</string>
    <string name="et_name">Nhập tên</string>
    <string name="tv_number_phone">Nhập số điện thoại</string>
    <string name="tv_phone">Số điện thoại</string>
    <string name="tv_enter_new_pass">Nhập lại mật khẩu</string>
    <string name="btn_signin">Đăng kí</string>
    <string name="action_home">Home</string>
    <string name="action_bookng">Booking</string>
    <string name="action_hotel">Hotel</string>
    <string name="action_chat">Chat</string>
    <string name="todo">TODO</string>
    <string name="lake_zell">Lake zell</string>
    <string name="india">India</string>
    <string name="from_200">From $200</string>
    <string name="img">IMG</string>
    <string name="tv_hotel">Khách sạn</string>
    <string name="btn_book">Book</string>
    <string name="et_message">Enter message</string>
    <string name="btn_send">Gửi</string>
    <string name="tv_title_chat">Chat</string>
    <string name="tv_title_pas">Vui lòng nhập Email đã đăng kí tài khoản</string>
    <string name="et_sdt">Nhập Email</string>
    <string name="btn_fogotPa">Mật khẩu mới</string>
    <string name="tv_OTP">Nhập mã OTP</string>
    <string name="btn_senOTP">Gửi OTP</string>
    <string name="tv_title_profi">Thông tin người dùng</string>
    <string name="tv_name">Người dùng</string>
    <string name="tv_title_phone">Số điện thoại :</string>
    <string name="tv_phonenumber">Null</string>
    <string name="tv_title_email">Email :</string>
    <string name="btn_logout">Đăng xuất</string>
    <string name="tv_title_app">Du lịch tận hưởng cuộc sống !</string>
    <string name="tv_nameapp">Travel The Word</string>
    <string name="tv_name_full">Tên người dùng</string>
    <string name="tv_ti">Nhập mật khẩu hiện tại</string>
    <string name="btn_save_new_pass">Lưu mật khẩu</string>
    <string name="tv_new_re_pass">Nhập lại mật khẩu mới</string>
    <string name="tv_new_pass">Nhập mật khẩu mới</string>
    <string name="tv_title_re_pass">Thay đổi mật khẩu</string>
    <string name="tv_contry">, Srinagar</string>
    <string name="tv_huy_all">Hủy tất cả</string>

</resources>