<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/im_bg"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/bg" />

        <ImageView
            android:id="@+id/im_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />
        <RelativeLayout
            android:id="@+id/rl_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/im_bg"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvName"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" , "
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_toEndOf="@id/tv_name"/>
            <TextView
                android:id="@+id/tv_country_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_contry"
                android:layout_toEndOf="@id/tv_space"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toStartOf="@id/im_star"
                android:text="@string/star"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/im_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="4dp"
                android:src="@drawable/ic_baseline_star_24" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_title"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/tv_avai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_avai"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/tv_avai"
                android:text="@string/tv_date" />

            <TextView
                android:id="@+id/tv_price_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_avai"
                android:layout_marginTop="8dp"
                android:text="@string/tv_price_range"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_avai"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/tv_price_range"
                android:text="@string/tv_price" />

            <LinearLayout
                android:id="@+id/im_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_price_range"
                android:orientation="horizontal"/>

            <TextView
                android:id="@+id/tv_title_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/im_img"
                android:layout_marginTop="8dp"
                android:text="@string/tv_about"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title_about"
                android:text="@string/tv_about1" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_booking"
                android:textAllCaps="false"
                android:backgroundTint="@color/bgMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:text="@string/btn_booking"
                android:layout_marginEnd="16dp"/>
        </LinearLayout>
    </RelativeLayout>

</layout>