<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="8dp">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:orientation="horizontal"
    >

    <ImageView
        android:id="@+id/im_place"
        android:layout_width="153dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/img"
        android:foregroundGravity="center"
        android:scaleType="fitXY"
        android:src="@drawable/lake" />
    <LinearLayout
        android:layout_toEndOf="@id/im_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">
        <TextView
            android:id="@+id/tv_place_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lake_zell"
            android:textSize="15sp"
            android:layout_marginTop="2dp"
            />
        <TextView
            android:id="@+id/tv_country_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/india"
            android:textSize="15sp"
            android:layout_marginTop="2dp"

            />
        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_200"
            android:textSize="15sp"
            android:layout_marginTop="16dp"
            />
    </LinearLayout>



</RelativeLayout>
</androidx.cardview.widget.CardView>