<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/rl_search"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/bgMain">
            <ImageView
                android:id="@+id/img_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_baseline_arrow_back_24" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/tv_title_re_pass"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="serif"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:layout_below="@id/rl_search">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_new_pass"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_new_pass"
                android:inputType="text"
                android:maxLength="24"
                android:minEms="6"
                android:maxLines="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_new_re_pass"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_re_new_pass"
                android:maxLength="24"
                android:inputType="text"
                android:maxLines="1"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_save_new_pass"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/bgMain"
            android:layout_margin="16dp"
            android:text="@string/btn_save_new_pass"
            android:textAllCaps="false"/>
    </RelativeLayout>
</layout>