<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
   >
    <RelativeLayout
        android:id="@+id/activityroot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_title_chat"
            android:textSize="32sp"
            android:textStyle="bold" />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
             android:layout_below="@id/tv_title"
            android:layout_above="@id/layout_bottom"
            android:id="@+id/rc_message"/>
        <RelativeLayout
            android:id="@+id/layout_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_message"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:id="@+id/et_message"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/btn_send"
                android:layout_marginEnd="10dp"/>
            <Button
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_send"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/bgMain"/>

        </RelativeLayout>

    </RelativeLayout>

</layout>