<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl_search"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/bgMain">

            <TextView
                android:id="@+id/tv_find"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/Find"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_find"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/im_user"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/logo_user" />

            <TextView
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tv_next"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/search_bg"
                android:drawablePadding="16dp"
                android:padding="10dp"
                android:paddingStart="16dp"
                android:text="@string/search"
                android:textColor="@color/color_search"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/ic_baseline_search_24"
                tools:ignore="RtlSymmetry" />
        </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_recents"
        android:layout_below="@+id/rl_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/tv_recent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent"
            android:textSize="15sp"
            android:textStyle="bold" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_recent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_recent"
            android:layout_marginTop="8dp"
            android:background="#F5F7F7" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@id/rl_recents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/tv_top_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_places"
            android:textSize="15sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_top_places"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_top_place"
            android:layout_marginTop="8dp"
            android:background="#F5F7F7" />
         </RelativeLayout>
    </RelativeLayout>
</layout>